[package]
name = "medians"
version = "2.1.7"
authors = ["Libor Spacek"]
edition = "2021"
description = "Median, Statistical Measures, Mathematics, Statistics"
readme = "README.md"
homepage = "https://github.com/liborty/medians"
repository = "https://github.com/liborty/medians"
license = "BSD-3-Clause"
keywords = ["statistics","median"]
categories = ["science","mathematics","algorithms"]
include = [
    "src/lib.rs",
    "src/algos.rs",
    "src/error.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]
[badges]
maintenance = { status = "actively-developed" }
[lib]
[dependencies]
indxvec = "1.4"
[dev-dependencies]
devtimer = "4.0"
ran = "1.0"
times = "1.0"
