[package]
name = "medians"
version = "2.3.1"
authors = ["Libor Spacek"]
edition = "2021"
description = "Median, Statistical Measures, Mathematics, Statistics"
readme = "README.md"
homepage = "https://github.com/liborty/medians"
repository = "https://github.com/liborty/medians"
license = "BSD-3-Clause"
keywords = ["statistics","median"]
categories = ["science","mathematics","algorithms"]
include = [
    "src/lib.rs",
    "src/algos.rs",
    "src/algosf64.rs",
    "src/error.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]
[badges]
maintenance = { status = "actively-developed" }
[lib]
[dependencies]
indxvec = "1.8"
ran = "1.1"
[dev-dependencies]
devtimer = "4.0"
times = "1.0"
