[package]
name = "medians"
version = "3.0.6"
authors = ["Libor Spacek"]
edition = "2021"
description = "Median, Statistical Measures, Mathematics, Statistics"
readme = "README.md"
homepage = "https://github.com/liborty/medians"
repository = "https://github.com/liborty/medians"
license = "BSD-3-Clause"
keywords = ["statistics","median"]
categories = ["science","mathematics","algorithms"]
include = [
    "src/lib.rs",
    "src/algos.rs",
    "src/error.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]
[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
[badges]
maintenance = { status = "actively-developed" }
[lib]
[dependencies]
indxvec = "1.8"
[dev-dependencies]
ran = "2.0"
times = "1.0"
